Updates some features

--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 <!--Modal: Contact form-->
 <div class="modal fade formulario" id="contactenos_form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
@@ -56,28 +57,30 @@
                                   required></textarea>
                         <label for="form8">{% trans 'mensaje'|title %}</label>
                     </div>
-                    <div class="options text-center mt-1 texto-legal">
-                        {% blocktrans %}
-                            ODECOPACK SAS le informa que los datos personales que se recolectan
-                            a través de este formulario serán tratados de manera segura y confiable de acuerdo
-                            con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
-                        {% endblocktrans %}
-                        <p>
+                    {% if LANGUAGE_CODE != 'en' %}
+                        <div class="options text-center mt-1 texto-legal">
                             {% blocktrans %}
-                                En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
-                                datos por
-                                favor
-                                envíe su solicitud al correo:  protecciondatos@odecopack.com , o comuníquese
-                                al
-                                teléfono:
-                                4856565
+                                ODECOPACK SAS le informa que los datos personales que se recolectan
+                                a través de este formulario serán tratados de manera segura y confiable de acuerdo
+                                con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
                             {% endblocktrans %}
-                        </p>
-                        <div class="text-center">
-                            <a target="_blank" href="{% url 'web:tratamiento_datos_personales' %}">VER POLITICA DE
-                                TRATAMIENTO DE DATOS PERSONALES</a>
+                            <p>
+                                {% blocktrans %}
+                                    En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
+                                    datos por
+                                    favor
+                                    envíe su solicitud al correo:  protecciondatos@odecopack.com , o comuníquese
+                                    al
+                                    teléfono:
+                                    4856565
+                                {% endblocktrans %}
+                            </p>
+                            <div class="text-center">
+                                <a target="_blank" href="{% url 'web:tratamiento_datos_personales' %}">VER POLITICA DE
+                                    TRATAMIENTO DE DATOS PERSONALES</a>
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
                     <div id="recaptcha_contactanos" class="col-12">
                         <div class="g-recaptcha"
                              data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
