--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -21,7 +21,11 @@
                                     {% endif %}
                                 <div class="col-12">
                                     <h4 class="text-center">
-                                        {{ industria.nombre }}
+                                        {% if LANGUAGE_CODE == 'en' %}
+                                            {{ industria.nombre_en }}
+                                        {% else %}
+                                            {{ industria.nombre }}
+                                        {% endif %}
                                     </h4>
                                 </div>
                                 {% for cliente in industria.clientes.all %}
